exports[`invalid(1): {\"name\": \"foo\", \"license\": \"MIT\", \"keywords\": [\"x\"], \"description\": \"bar\"} 1`] = `

[Input]
  1 | {"name": "foo", "license": "MIT", "keywords": ["x"], "description": "bar"}

`;

exports[`invalid(1): {\"name\": \"foo\", \"license\": \"MIT\", \"keywords\": [\"x\"], \"description\": \"bar\"} 2`] = `

Message:
> 1 | {"name": "foo", "license": "MIT", "keywords": ["x"], "description": "bar"}
    | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ A published package should declare \`version\`.

`;

exports[`invalid(10): {\"name\": \"foo\", \"version\": \"1.0.0\", \"private\": false} 1`] = `

[Input]
  1 | {"name": "foo", "version": "1.0.0", "private": false}

`;

exports[`invalid(10): {\"name\": \"foo\", \"version\": \"1.0.0\", \"private\": false} 2`] = `

Message:
> 1 | {"name": "foo", "version": "1.0.0", "private": false}
    | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ A published package should declare \`description\`.

`;

exports[`invalid(10): {\"name\": \"foo\", \"version\": \"1.0.0\", \"private\": false} 3`] = `

Message:
> 1 | {"name": "foo", "version": "1.0.0", "private": false}
    | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ A published package should declare \`license\`.

`;

exports[`invalid(10): {\"name\": \"foo\", \"version\": \"1.0.0\", \"private\": false} 4`] = `

Message:
> 1 | {"name": "foo", "version": "1.0.0", "private": false}
    | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ A published package should declare \`keywords\`.

`;

exports[`invalid(11): {\"name\": \"foo\", \"version\": \"1.0.0\"} 1`] = `

[Input]
Options:
- fieldsWhenPublic:
    - 'description'
    - 'license'

Code:
  1 | {"name": "foo", "version": "1.0.0"}

`;

exports[`invalid(11): {\"name\": \"foo\", \"version\": \"1.0.0\"} 2`] = `

Message:
> 1 | {"name": "foo", "version": "1.0.0"}
    | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ A published package should declare \`description\`.

`;

exports[`invalid(11): {\"name\": \"foo\", \"version\": \"1.0.0\"} 3`] = `

Message:
> 1 | {"name": "foo", "version": "1.0.0"}
    | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ A published package should declare \`license\`.

`;

exports[`invalid(2): {\"version\": \"1.0.0\", \"license\": \"MIT\", \"keywords\": [\"x\"], \"description\": \"bar\"} 1`] = `

[Input]
  1 | {"version": "1.0.0", "license": "MIT", "keywords": ["x"], "description": "bar"}

`;

exports[`invalid(2): {\"version\": \"1.0.0\", \"license\": \"MIT\", \"keywords\": [\"x\"], \"description\": \"bar\"} 2`] = `

Message:
> 1 | {"version": "1.0.0", "license": "MIT", "keywords": ["x"], "description": "bar"}
    | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ A published package should declare \`name\`.

`;

exports[`invalid(3): {\"description\": \"no name or version\"} 1`] = `

[Input]
  1 | {"description": "no name or version"}

`;

exports[`invalid(3): {\"description\": \"no name or version\"} 2`] = `

Message:
> 1 | {"description": "no name or version"}
    | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ A published package should declare \`name\`.

`;

exports[`invalid(3): {\"description\": \"no name or version\"} 3`] = `

Message:
> 1 | {"description": "no name or version"}
    | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ A published package should declare \`version\`.

`;

exports[`invalid(3): {\"description\": \"no name or version\"} 4`] = `

Message:
> 1 | {"description": "no name or version"}
    | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ A published package should declare \`license\`.

`;

exports[`invalid(3): {\"description\": \"no name or version\"} 5`] = `

Message:
> 1 | {"description": "no name or version"}
    | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ A published package should declare \`keywords\`.

`;

exports[`invalid(4): {\"name\": \"foo\"} 1`] = `

[Input]
Options:
- fields:
    - 'name'
    - 'license'
  fieldsWhenPublic: []

Code:
  1 | {"name": "foo"}

`;

exports[`invalid(4): {\"name\": \"foo\"} 2`] = `

Message:
> 1 | {"name": "foo"}
    | ^^^^^^^^^^^^^^^ Missing required field \`license\`.

`;

exports[`invalid(5): {\"private\": true} 1`] = `

[Input]
Options:
- fields:
    - 'name'
  fieldsWhenPublic: []

Code:
  1 | {"private": true}

`;

exports[`invalid(5): {\"private\": true} 2`] = `

Message:
> 1 | {"private": true}
    | ^^^^^^^^^^^^^^^^^ Missing required field \`name\`.

`;

exports[`invalid(6): {\"name\": \"foo\", \"version\": \"1.0.0\", \"keywords\": [\"x\"], \"description\": \"bar\"} 1`] = `

[Input]
Options:
- fields:
    - 'name'
    - 'version'
    - 'license'

Code:
  1 | {"name": "foo", "version": "1.0.0", "keywords": ["x"], "description": "bar"}

`;

exports[`invalid(6): {\"name\": \"foo\", \"version\": \"1.0.0\", \"keywords\": [\"x\"], \"description\": \"bar\"} 2`] = `

Message:
> 1 | {"name": "foo", "version": "1.0.0", "keywords": ["x"], "description": "bar"}
    | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ Missing required field \`license\`.

`;

exports[`invalid(7): {} 1`] = `

[Input]
  1 | {}

`;

exports[`invalid(7): {} 2`] = `

Message:
> 1 | {}
    | ^^ A published package should declare \`name\`.

`;

exports[`invalid(7): {} 3`] = `

Message:
> 1 | {}
    | ^^ A published package should declare \`version\`.

`;

exports[`invalid(7): {} 4`] = `

Message:
> 1 | {}
    | ^^ A published package should declare \`description\`.

`;

exports[`invalid(7): {} 5`] = `

Message:
> 1 | {}
    | ^^ A published package should declare \`license\`.

`;

exports[`invalid(7): {} 6`] = `

Message:
> 1 | {}
    | ^^ A published package should declare \`keywords\`.

`;

exports[`invalid(8): {\"name\": \"foo\", \"version\": \"1.0.0\"} 1`] = `

[Input]
  1 | {"name": "foo", "version": "1.0.0"}

`;

exports[`invalid(8): {\"name\": \"foo\", \"version\": \"1.0.0\"} 2`] = `

Message:
> 1 | {"name": "foo", "version": "1.0.0"}
    | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ A published package should declare \`description\`.

`;

exports[`invalid(8): {\"name\": \"foo\", \"version\": \"1.0.0\"} 3`] = `

Message:
> 1 | {"name": "foo", "version": "1.0.0"}
    | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ A published package should declare \`license\`.

`;

exports[`invalid(8): {\"name\": \"foo\", \"version\": \"1.0.0\"} 4`] = `

Message:
> 1 | {"name": "foo", "version": "1.0.0"}
    | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ A published package should declare \`keywords\`.

`;

exports[`invalid(9): {\"name\": \"foo\", \"version\": \"1.0.0\", \"license\": \"MIT\", \"keywords\": [\"x\"]} 1`] = `

[Input]
  1 | {"name": "foo", "version": "1.0.0", "license": "MIT", "keywords": ["x"]}

`;

exports[`invalid(9): {\"name\": \"foo\", \"version\": \"1.0.0\", \"license\": \"MIT\", \"keywords\": [\"x\"]} 2`] = `

Message:
> 1 | {"name": "foo", "version": "1.0.0", "license": "MIT", "keywords": ["x"]}
    | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ A published package should declare \`description\`.

`;
